# toolArchive

./: ..travis.yml.swp  .gitignore  .project  .travis.yml  .travisHomeBrewDoItAll.swp  CMakeLists.txt  CMakeUtils.txt  Doxyfile.in  History.txt  LICENSE  License.md  README.md  README.txt  Rakefile  Readme.md  RunningGuisRootless.md  TODO.md  ToDo.md  build.gradle  build.sbt  docTool.go  lms  lmsfile  setup  travisHomeBrewDoItAll
HAT-trie/: CMakeLists.txt
HAT-trie/src/hattrie/: ahtable.h  hat-trie.c  hat-trie.h
HAT-trie/test/: check_ahtable.c  check_hattrie.c  str_map.c
analysis/: r1c1Equilibria.ipynb
clientApp/: Readme.md
design/: Readme.md
design/architecture/: Readme.md  models.md  spatialIntegraion.md
design/sprints/: Readme.md  ToDo.md  sprint-001-build-trophic-model.md
doc/: SetupNFSCompileFarm.md
docs/: Readme.md
dynSysToolKit/: NAMESPACE
dynSysToolKit/src/: cIntegrateLorenz.c  dynSysToolKit.h
dynSysToolKit/vignettes/: LorenzEquations.R  LorenzEquations.Rmd  LorenzEquations.html
ecoNetworkSimulator/: DESCRIPTION  NAMESPACE
ecoNetworkSimulator/R/: ecoNetworksSimulator  ecoNetworksSimulator.R  models.R
ecoNetworkSimulator/man/: createModel.Rd  listModels.Rd  simulateModel.Rd
ecoNetworkSimulator/src/: ecoNetworksSimulator.c
ecoNetworkSimulator/tests/: testthat.R
ecoNetworksSimulator/: DESCRIPTION  NAMESPACE  ecoNetworkSimulator.Rproj
ecoNetworksSimulator/R/: cIntegrateEuler.R  cModelBuilder.R  ecoNetworksSimulator.R  integrateModels.R  modelBuilder.R  models.R  species.R
ecoNetworksSimulator/src/: CIntegrateEuler.c  CModelBuilder.c  CModels.h  CXorShiftRNG.c  ecoNetworksSimulator.c
ecoNetworksSimulator/vignettes/: BuildingModels.Rmd  StabilityTrophicLogisticModels.Rmd  TrophicLogisticModels.Rmd
example-development-in-a-container/: Readme.md
example-rootless-boot-time-services/: Readme.md
example-rootless-boot-time-services/step1-create-a-pod/: Readme.md  gitea.conf  pod-services-down  pod-services-up
example-rootless-boot-time-services/step2-running-pods-at-boot-time/: Readme.md  pod.service
examples/: README.md
examples/markdown/: CMakeLists.txt
examples/markdown/lib/: CMakeLists.txt  markdown.h
examples/markdown/src/: CMakeLists.txt
examples/markdown/tests/: markdownTests.cpp
installingLua/: installLua
installingLua/patches/: lua.lfs.patch
lib/: cook.rb
lib/dynUtf8Parser/: classifier.cpp  classifier.h  nfa.cpp  nfa.h  nfaBuilderFragments.cpp  nfaBuilderParser.cpp  parser.h  simpleLisp.cpp  simpleLisp.h  streamRegistry.h  tokens.cpp  tokens.h  utf8chars.cpp  utf8chars.h
lib/rake/: config.rb  cookUtils.rb  extensions.rb
luaLibs/lms/: .c.lua.swp  Readme.md  c.lua  cTests.lua  contests.lua  context.lua  contextDoc.lua  contextMod.lua  joyLoL.lua  joylolTests.lua  litProgs.lua  release.lua  src.lua
ndViewer/: NAMESPACE  ndViewer.Rproj
ndViewer/R/: shinyUIComponents.R
ndViewer/man/: viewPointUI.Rd
ndViewer/tests/: testthat.R
project/: Build.scala  LaTeXMarkdownTestRig.javaBroken
project/lib/: Readme.md
scripts/: compileParallelTUC  typesetParallelDocs
scripts/pContext/: job.datasets.collected  job.fileobjreferences.collected  job.variables.checksums  pContextLoader.lua  publications.collected  structures.counters.collected  structures.lists.collected  structures.pages.collected  structures.references.collected  structures.references.referred  structures.registers.collected  structures.specials.collected  thirddata.pcontext.subdocs
src/: CMakeLists.txt  CMakeUtils.txt  assertions.h  banditAssertionException.h  blockAllocator.h  classifier.cpp  classifier.h  dfa.cpp  dfa.h  invariants.h  lexer.cpp  lexer.h  lexerFragments.cpp  lmsDMUCSrun.c  nfa.cpp  nfa.h  nfaBuilder.cpp  nfaBuilder.h  nfaBuilderFragments.cpp  nfaBuilderParser.cpp  nfaFragments.cpp  nfaFragments.h  parseTrees.cpp  parseTrees.cpp.off  parseTrees.h  parseTrees.h.off  parser.h  simpleLisp.cpp  simpleLisp.h  streamRegistry.cpp  streamRegistry.h  symbols.cpp  symbols.h  tokens.cpp  tokens.h  utf8chars.cpp  utf8chars.h  varArray.h
src/dfa/: automataStack.h  automataState.h  dfa.cpp  dfa.h  nextStateMapping.cpp  nextStateMapping.h  nfaStateIterator.h  nfaStateMapping.cpp  nfaStateMapping.h  pdmTracer.cpp  pdmTracer.h  pushDownMachine.cpp  pushDownMachine.h  pushDownMachineInline.h  pushDownMachineTracer.cpp  state.cpp  stateAllocator.cpp  stateAllocator.h
src/dynUtf8Parser/: classifier.cpp  classifier.h  nfa.h  nfaBuilder.h  tokens.cpp
step0-setup-machine/: Readme.md  setup-cgroups.md  setup-namespaces.md
test/: test_cook.rb
testDocs/: Readme.md
tests/: CMakeLists.txt  blockAllocatorTests.cpp  classifierTests.cpp  dfaTests.cpp  hatTrieTests.cpp  lexerTests.cpp  matchTokens  nfaBuilderTests.cpp  nfaFragmentsTests.cpp  nfaTests.cpp  parseTreesTests.cpp  parserTests.cpp  runTests.cpp  simpleLispTests.cpp  streamRegistryTests.cpp  symbolsTests.cpp  tokensTest.cpp  utf8charsTests.cpp  varArrayTests.cpp
tests/bandit/: localHelpers.h
tests/dfa/: automataStateTests.cpp  dfaTests.cpp  nextStateMappingTests.cpp  nfaStateIteratorTests.cpp  nfaStateMappingTests.cpp  pushDownMachineTests.cpp  stateAllocatorTests.cpp
tools/LaTeXMarkdown/: .classpath  (+3 more)
(+147 files in other folders)
